AC_INIT(src/nxml_parser.c)

LIBNXML_MAJOR_VERSION=0
LIBNXML_MINOR_VERSION=18
LIBNXML_MICRO_VERSION=3
LIBNXML_VERSION=$LIBNXML_MAJOR_VERSION.$LIBNXML_MINOR_VERSION.$LIBNXML_MICRO_VERSION
LIBNXML_VERSION_INFO=`expr $LIBNXML_MAJOR_VERSION + $LIBNXML_MINOR_VERSION`:$LIBNXML_MICRO_VERSION:$LIBNXML_MINOR_VERSION
VERSION=${LIBNXML_VERSION}

AM_SANITY_CHECK
AM_INIT_AUTOMAKE(libnxml, $VERSION)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE
AC_PROG_CC
AC_ISC_POSIX
AC_PROG_RANLIB
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_HEADER_DIRENT
AC_CHECK_HEADER(curl/curl.h,,AC_MSG_ERROR(libcurl is required to compile libnxml))
AC_CHECK_LIB(curl,curl_version,,AC_MSG_ERROR(libcurl is required to compile libnxml))

CFLAGS="$CFLAGS -Wall -DNXML_INTERNAL"

AC_SUBST(LIBNXML_VERSION)
AC_SUBST(LIBNXML_VERSION_INFO)
AC_SUBST(LIBNXML_MAJOR_VERSION)
AC_SUBST(LIBNXML_MINOR_VERSION)
AC_SUBST(LIBNXML_MICRO_VERSION)

AC_OUTPUT([
Makefile
src/nxml.h
src/Makefile
test/Makefile 
doc/Makefile 
nxml.pc
doxy.conf
])
